[package]
name = "toju"
version = "0.1.0"
description = "toju - Payment bridge for decentralized storage on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "toju"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
sha2 = "0.10.9"
cid = "0.11"
